hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tarray.php.exp
File "tarray.php", line 5, characters 10-11:
Invalid return type (Typing[4110])
  File "tarray.php", line 4, characters 34-44:
  Expected `vec<int>`
  File "tarray.php", line 4, characters 16-27:
  But got `dynamic`
File "tarray.php", line 9, characters 10-11:
Invalid return type (Typing[4110])
  File "tarray.php", line 8, characters 42-60:
  Expected `dict<int, string>`
  File "tarray.php", line 8, characters 16-35:
  But got `dynamic`
